--- a/deploy/.env.production
+++ b/deploy/.env.production
@@ -1,3 +1,6 @@
+# ── Domain (required for HTTPS mode, e.g. cheese.yourdomain.com) ──
+# DOMAIN=cheese.yourdomain.com
+
 # ── Server ──
 SERVER_PORT=3001
 CORS_ORIGIN=*
