--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -14,6 +14,7 @@ LIVEKIT_API_SECRET=
 NIGHT_ACTION_SECONDS=8
 NIGHT_TURN_TIMEOUT_SECONDS=30
 NIGHT_EMPTY_PAUSE_MS=2000
+ACCOMPLICE_SELECT_SECONDS=30
 DAY_DISCUSSION_SECONDS=15
 VOTING_SECONDS=15
 DEALING_DELAY_SECONDS=3
