--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -35,7 +35,7 @@ server {
     }
 
     # Cache static assets
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2?)$ {
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2?|mp3|flac|ogg|wav)$ {
         expires 30d;
         add_header Cache-Control "public, immutable";
     }
